edit profile page

--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,11 @@ form h4 {
   @media screen and (max-width: 767px) {
     form h4 {
       font-size: 16px; } }
+form .form-group:first-child {
+  padding-right: 40px; }
+  @media screen and (max-width: 767px) {
+    form .form-group:first-child {
+      padding-right: 0; } }
 form label {
   color: #888686;
   font-family: 'opensanssemibold', sans-serif;
@@ -219,6 +224,8 @@ form .form-control {
   @media screen and (max-width: 767px) {
     form .form-control {
       height: 35px; } }
+form textarea.form-control {
+  height: 200px; }
 form select {
   -webkit-appearance: none;
   height: 40px;
@@ -252,8 +259,16 @@ form .gender:after {
   right: 15px;
   top: 45px;
   background-size: 100%; }
+form .gender.edit_profile_gender:after {
+  right: 55px; }
+  @media screen and (max-width: 767px) {
+    form .gender.edit_profile_gender:after {
+      right: 15px; } }
 form .form-check {
   margin-top: 10px; }
+  @media screen and (max-width: 575px) {
+    form .form-check.edit_profile_check {
+      width: 50%; } }
   form .form-check .form-check-label {
     margin-left: 10px;
     font-size: 12px;
@@ -261,6 +276,22 @@ form .form-check {
     @media screen and (max-width: 767px) {
       form .form-check .form-check-label {
         font-size: 10px; } }
+    form .form-check .form-check-label.edit_profile_check {
+      font-size: 16px; }
+      @media screen and (max-width: 767px) {
+        form .form-check .form-check-label.edit_profile_check {
+          font-size: 14px; } }
+    form .form-check .form-check-label.radio_button {
+      font-size: 16px; }
+      @media screen and (max-width: 767px) {
+        form .form-check .form-check-label.radio_button {
+          font-size: 14px; } }
+      form .form-check .form-check-label.radio_button span {
+        font-family: 'opensansbold', sans-serif;
+        font-weight: 800; }
+
+#loginModal .form-group:first-child {
+  padding-right: 0; }
 
 @font-face {
   font-family: 'opensansreg';
@@ -321,12 +352,13 @@ p, h4 {
   header img {
     max-width: 200px; } }
 header .login {
-  color: #1c85bd; }
+  color: #f36c00;
+  text-decoration: underline; }
   @media screen and (max-width: 767px) {
     header .login {
       margin: auto; } }
   header .login:hover {
-    color: #176d9b; }
+    color: #cc5b00; }
 header .btn.black {
   padding: 10px 70px; }
   @media screen and (max-width: 767px) {
@@ -647,5 +679,206 @@ header .user_info .nav-item a {
       float: right;
       width: 24%;
       display: block; }
+
+.edit_profile .tab_menu_border {
+  width: 100%;
+  float: left;
+  border-bottom: 3px solid #efefef;
+  position: absolute;
+  z-index: -1;
+  top: 49px; }
+  @media screen and (max-width: 767px) {
+    .edit_profile .tab_menu_border {
+      top: 43px; } }
+.edit_profile .nav-tabs {
+  border-bottom: none;
+  z-index: 1;
+  background: #ffffff; }
+  .edit_profile .nav-tabs .nav-item {
+    margin-bottom: -5px;
+    margin-right: 1%; }
+    @media screen and (max-width: 767px) {
+      .edit_profile .nav-tabs .nav-item {
+        margin-right: .1em; } }
+    .edit_profile .nav-tabs .nav-item:last-child {
+      margin-right: 0; }
+  .edit_profile .nav-tabs .nav-link {
+    color: #3b3a3a;
+    background: #efefef;
+    padding: 12px 30px 10px 30px;
+    border: 3px solid transparent; }
+    @media screen and (max-width: 767px) {
+      .edit_profile .nav-tabs .nav-link {
+        padding: 8px 10px 8px 10px;
+        font-size: .7em; } }
+    @media screen and (max-width: 575px) {
+      .edit_profile .nav-tabs .nav-link {
+        padding: 8px 4px 8px 4px;
+        font-size: 0.65em; } }
+    .edit_profile .nav-tabs .nav-link.active {
+      background: #ffffff;
+      border-top: 3px solid #efefef;
+      border-right: 3px solid #efefef;
+      border-left: 3px solid #efefef;
+      border-bottom: 3px solid #ffffff;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px; }
+    .edit_profile .nav-tabs .nav-link:hover {
+      background: #ffffff;
+      border-top: 3px solid #efefef;
+      border-right: 3px solid #efefef;
+      border-left: 3px solid #efefef;
+      border-bottom: 3px solid #ffffff;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px; }
+.edit_profile .tab-content {
+  padding: 80px 40px; }
+  @media screen and (max-width: 767px) {
+    .edit_profile .tab-content {
+      padding: 40px 20px; } }
+  @media screen and (max-width: 575px) {
+    .edit_profile .tab-content {
+      padding: 40px 0; } }
+.edit_profile .text_box {
+  background: #1c85bd;
+  color: #ffffff;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border-bottom: 6px solid #176d9b;
+  width: 80%;
+  max-width: 705px; }
+  @media screen and (max-width: 991px) {
+    .edit_profile .text_box {
+      max-width: unset;
+      width: auto; } }
+  @media screen and (max-width: 767px) {
+    .edit_profile .text_box {
+      max-width: 515px;
+      margin: auto; } }
+  .edit_profile .text_box h3 {
+    font-size: 22px; }
+    @media screen and (max-width: 991px) {
+      .edit_profile .text_box h3 {
+        font-size: 20px; } }
+    @media screen and (max-width: 767px) {
+      .edit_profile .text_box h3 {
+        font-size: 18px; } }
+    .edit_profile .text_box h3 span {
+      color: #85d1f9; }
+  .edit_profile .text_box h4 {
+    font-family: 'opensanssemibold', sans-serif;
+    font-weight: 600;
+    font-style: italic; }
+    @media screen and (max-width: 991px) {
+      .edit_profile .text_box h4 {
+        font-size: 14px; } }
+    @media screen and (max-width: 767px) {
+      .edit_profile .text_box h4 {
+        font-size: 12px; } }
+  .edit_profile .text_box .rounded-circle {
+    background: #f36c00;
+    text-align: center;
+    width: 170px;
+    height: 170px;
+    position: absolute;
+    right: 32px;
+    top: -40px;
+    border: 15px solid #ffffff; }
+    @media screen and (max-width: 991px) {
+      .edit_profile .text_box .rounded-circle {
+        width: 150px;
+        height: 150px;
+        right: 40px;
+        top: -30px; } }
+    @media screen and (max-width: 767px) {
+      .edit_profile .text_box .rounded-circle {
+        top: -8px;
+        right: -24px;
+        width: 100px;
+        height: 100px;
+        border: 8px solid #ffffff; } }
+    @media screen and (max-width: 575px) {
+      .edit_profile .text_box .rounded-circle {
+        top: 92%;
+        right: 50%;
+        margin-right: -60px;
+        z-index: 1; } }
+    .edit_profile .text_box .rounded-circle h2 {
+      font-size: 34px; }
+      @media screen and (max-width: 991px) {
+        .edit_profile .text_box .rounded-circle h2 {
+          font-size: 32px; } }
+      @media screen and (max-width: 767px) {
+        .edit_profile .text_box .rounded-circle h2 {
+          font-size: 22px; } }
+    .edit_profile .text_box .rounded-circle h3 {
+      font-size: 18px; }
+      @media screen and (max-width: 991px) {
+        .edit_profile .text_box .rounded-circle h3 {
+          font-size: 16px; } }
+      @media screen and (max-width: 767px) {
+        .edit_profile .text_box .rounded-circle h3 {
+          font-size: 12px; } }
+@media screen and (max-width: 767px) {
+  .edit_profile .list_box {
+    margin-top: 35px;
+    z-index: -1; } }
+@media screen and (max-width: 575px) {
+  .edit_profile .list_box h2 {
+    font-size: 18px; } }
+.edit_profile .list_box li {
+  border: none;
+  padding: 0; }
+.edit_profile .list_box h3 {
+  padding: 12px 5px 12px 40px;
+  display: inline-block;
+  width: 50%;
+  color: #888686; }
+  @media screen and (max-width: 991px) {
+    .edit_profile .list_box h3 {
+      width: 75%;
+      font-size: 16px; } }
+  @media screen and (max-width: 767px) {
+    .edit_profile .list_box h3 {
+      width: 100%;
+      font-size: 14px; } }
+  .edit_profile .list_box h3.blue_stripe {
+    background: #e4f4ff; }
+  .edit_profile .list_box h3:before {
+    content: '';
+    background: url("../images/check-mark.png") no-repeat;
+    background-size: 100%;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: 10px; }
+    @media screen and (max-width: 767px) {
+      .edit_profile .list_box h3:before {
+        width: 15px;
+        height: 15px; } }
+.edit_profile .list_box img {
+  width: auto; }
+.edit_profile .table_tab h3 {
+  color: #1c85bd;
+  font-size: 20px;
+  margin-bottom: 15px; }
+  @media screen and (max-width: 767px) {
+    .edit_profile .table_tab h3 {
+      font-size: 18px; } }
+.edit_profile .table_tab .table_wrap {
+  overflow-x: scroll; }
+.edit_profile .table_tab .table {
+  min-width: 600px;
+  max-width: 750px; }
+.edit_profile .table_tab .table thead th, .edit_profile .table_tab .table th, .edit_profile .table_tab .table td {
+  border-top: none;
+  border-bottom: none; }
+.edit_profile .table_tab .table td {
+  color: #4f4f4f; }
+.edit_profile .table_tab .table-striped tbody tr:nth-of-type(odd) {
+  background: #e4f4ff; }
 
 /*# sourceMappingURL=main.css.map */
