--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -2,7 +2,6 @@
 
 $charcoal: #3a3a3a;
 $cobalt: #0020C2;
-$lightBlue: #24c3e0;
 $grayBlue: #678699;
 
 $gray: #4f4f4f;
@@ -16,5 +15,7 @@ $orange: #f36c00;
 $orangeHover: #cc5b00;
 $blue: #1c85bd;
 $blueHover: #176d9b;
+$lightBlue: #85d1f9;
+$lighterBlue: #e4f4ff;
 $red: #f53b3b;
 $yellow: #ffff33;
