--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -229,6 +229,14 @@ form {
         }
     }
 
+    .form-group:first-child {
+        padding-right: 40px;
+
+        @include media($mobile) {
+            padding-right: 0;
+        }
+    }
+
     label {
         color: $textGray;
         @include opensanssemibold;
@@ -258,6 +266,11 @@ form {
             height: 35px;
         }
     }
+
+    textarea.form-control {
+        height: 200px;
+    }
+
 
     select {
         -webkit-appearance: none;
@@ -305,10 +318,26 @@ form {
             top: 45px;
             background-size: 100%;
         }
+
+        &.edit_profile_gender {
+            &:after {
+                right: 55px;
+
+                @include media($mobile) {
+                    right: 15px;
+                }
+            }
+        }
     }
 
     .form-check {
         margin-top: 10px;
+
+        &.edit_profile_check {
+            @include media($smallMobile) {
+                width: 50%;
+            }
+        }
 
         .form-check-label {
             margin-left: 10px;
@@ -318,6 +347,30 @@ form {
             @include media($mobile) {
                 font-size: 10px;
             }
+
+            &.edit_profile_check {
+                font-size: 16px;
+
+                @include media($mobile) {
+                    font-size: 14px;
+                }
+            }
+
+            &.radio_button {
+                font-size: 16px;
+
+                @include media($mobile) {
+                    font-size: 14px;
+                }
+
+                span {
+                    @include opensansbold;
+                }
+            }
         }
     }
+}
+
+#loginModal .form-group:first-child {
+    padding-right: 0;
 }
